--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   http: ^1.2.1
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
   
 
 dev_dependencies:
